objects/Referral__c.object
<CustomObject>
    <fields>
        <fullName>Expires_On__c</fullName>
        <description>Date on which this Reference Expires, every time reference needs to be extended this date should be updated to reflect the extension. Any Opportunity created while this reference is not expired, for the primary contact matching the email provided in this reference will be have Referrer set with Referrer in this record.</description>
        <label>Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To check if the reference is a active reference or not ?</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_Email__c</fullName>
        <description>Captures the email of the new lead coming to the system with reference of a referrer.</description>
        <label>Referral Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referral_Source__c</fullName>
        <description>Captures the source of the lead from where the lead is coming from ?</description>
        <label>Referral Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_Date__c</fullName>
        <label>Referred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referrer_Email__c</fullName>
        <formula>Referrer__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Type__c</fullName>
        <description>Captures the type of the referrer (contact) either a member or employee or any other value fetched from the contact level.</description>
        <label>Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact who Referred the Person identified by given email address.</description>
        <label>Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Captures the start date of the reference, on which the referrer has referred the new lead. This is used to calculate the expiry of the reference record.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <description>This object will represent references made by either Member/Broker/Employee to certain person identified by email. 

This is generally valid for 60 days and may be extended by another 60 days based on certain events like if referred person books a tour, completes a tour or paperwork is sent to the person referred.</description>
    <label>Referral</label>
    <nameField>
        <label>Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Expires_On__c</columns>
        <columns>IsActive__c</columns>
        <columns>Referral_Email__c</columns>
        <columns>Referral_Source__c</columns>
        <columns>Referred_Date__c</columns>
        <columns>Referrer__c</columns>
        <columns>Referrer_Email__c</columns>
        <columns>Referrer_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
</CustomObject>